kubernetes/ingress/ingress-rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rabbitmq-domain
    annotations:
        ingress.kubernetes.io/ssl-redirect: "true"
        cert-manager.io/cluster-issuer: letsencrypt-prod
        nginx.ingress.kubernetes.io/proxy-body-size: 32m
spec:
    ingressClassName: nginx
    tls:
        -   hosts: ~
            secretName: tls-certificate
    rules:
        -   host: ~
            http:
                paths:
                    - backend:
                          service:
                              name: rabbitmq
                              port:
                                  number: 15672
                      path: '/'
                      pathType: Prefix
